--- a/src/pages/FreelanceDeveloper/freelanceDeveloper.css
+++ b/src/pages/FreelanceDeveloper/freelanceDeveloper.css
@@ -4,16 +4,19 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin: 20px 20px 20px 20px;
+  margin: 20px 150px 20px 150px;
   color: var(--navy-blue);
   background-color: rgb(214, 5, 5);
-  padding: 50px;
+  padding: 10px;
   border-radius: 50px;
   border: rgb(8, 218, 8) solid 20px;
 }
-/* .pageUnderConstruction {
 
-} */
+.web-image {
+  display: flex;
+  height: 400px;
+  margin: auto;
+}
 
 .freelanceAboutMe {
   color: var(--dark-blue);
@@ -29,7 +32,7 @@ color: var(--light-blue);
   background-color: var(--dark-blue);
   border: var(--light-blue) solid 10px;
   border-radius: 10px;
-  margin: 20px 20px 20px 20px;
+  margin: 20px 100px 20px 100px !important;
   padding: 1%;
   font-family: "Caveat", cursive !important;
   font-family: "Fuzzy Bubbles", cursive !important;
@@ -40,7 +43,7 @@ color: var(--light-blue);
   background-color: var(--light-blue);
   border: var(--dark-blue) solid 10px;
   border-radius: 10px;
-  margin: 20px 20px 20px 20px;
+  margin: 20px 100px 20px 100px !important;
   padding: 1%;
   font-family: "Caveat", cursive !important;
   font-family: "Fuzzy Bubbles", cursive !important;
@@ -50,7 +53,7 @@ color: var(--light-blue);
   background-color: var(--navy-blue);
   border: var(--dark-blue) solid 10px;
   border-radius: 10px;
-  margin: 20px 20px 20px 20px;
+  margin: 20px 100px 20px 100px !important;
   padding: 1%;
   font-family: "Caveat", cursive !important;
   font-family: "Fuzzy Bubbles", cursive !important;
