--- a/src/pages/Blog/blog.css
+++ b/src/pages/Blog/blog.css
@@ -34,3 +34,16 @@
   border-radius: 10px;
   padding: 1rem;
 }
+
+button {
+  display: flex;
+  color:#caf0f8 !important;
+background-color:var(--dark-blue) !important;
+border:var(--dark-blue) solid 10px !important;
+border-radius: 20px !important;
+}
+
+button:hover {
+  background-color: var(--dark-blue) !important;
+  border: var(--dark-blue) solid 10px !important;
+}
