first part of portfolio refactor, games page fix, simplify css code

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,31 @@
-#root {
+:root {
   text-align: center;
+  --light-blue: #caf0f8;
+  --aqua-blue: #5ff;
+  --dark-blue: rgb(5, 85, 146);
+  --navy-blue: #181d31;
+  --cream:  #e6ddc4;
+  height: 100vh;
 }
 
-@keyframes logo-spin {
+h1, h2, h3, h4, h5, p {
+  font-family: "Caveat", cursive;
+font-family: "Fuzzy Bubbles", cursive;  
+margin: 0;
+text-align: center;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+@keyframes spin {
   from {
     transform: rotate(0deg);
   }
@@ -12,10 +35,13 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  /* Apply animation only if reduced motion is not preferred */
+  a.logo-link .abfLogo {
+    animation: spin infinite 20s linear;
   }
 }
+
+/* Styles for the ABF logo */
 
 .abfLogo {
   height: 6em;
@@ -25,6 +51,89 @@
   border-radius: 100%;
 }
 
+/* Hover effect for the ABF logo */
+
 .abfLogo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+/* Media Queries */
+
+@media (max-width: 900px) {
+  .title {
+    width: 100%;
+    text-align: center;
+    font-size: 200%;
+    text-decoration: underline;
+    margin-bottom: 1%;
+    padding: 1rem;
+    font-style: italic;
+    color: rgb(5, 85, 146);
+  }
+
+  .text {
+    color: rgb(5, 85, 146) !important;
+    font-size: 70%;
+    text-align: center;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1%;
+  }
+
+  .myname {
+    color: rgb(5, 85, 146) !important;
+    text-align: center;
+    font-size: 100%;
+  }
+
+  .brand {
+    text-align: center;
+    color: rgb(5, 85, 146) !important;
+    font-size: 100%;
+  }
+}
+
+@media (max-width: 840px) {
+  .profilePic {
+    width: 20%;
+    height: 30%;
+    border-radius: 50px;
+    border: solid rgb(5, 85, 146) 5px;
+  }
+}
+
+@media (max-width: 545px) {
+  .contactMeForm {
+    width: 100%;
+    background-color: rgb(5, 85, 146) !important;
+    margin: auto;
+    border-radius: 40px;
+    padding: 2px;
+  }
+  .card {
+    width: 100%;
+    height: auto;
+    background: #caf0f8;
+    border-radius: 5%;
+    border: 1rem solid rgb(5, 85, 156);
+  }
+
+  .cardBodyText {
+    font-size: 100%;
+    height: auto;
+    border-top: 1rem solid rgb(5, 85, 156);
+  }
+
+  .cardBodyLinks {
+    font-size: 100%;
+    height: auto;
+    border-top: 1rem solid rgb(5, 85, 156);
+  }
+
+  .profilePic {
+    width: 30%;
+    height: 50%;
+    border-radius: 50px;
+    border: solid rgb(5, 85, 146) 5px;
+  }
 }
