css refactor - all camelCase, header added to components css

--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -1,3 +1,70 @@
+/* Header Component */
+
+.navigation {
+  width: 100% !important;
+  height: 100% !important;
+  font-size: 1rem !important;
+  background-color: var(--dark-blue) !important;
+  justify-content: space-around !important;
+  }
+
+.navIcons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-decoration: none !important;
+}
+
+.navbarIcons {
+  font-size: 2rem !important;
+  color: var(--light-blue) !important;
+  padding: 10px;
+}
+
+.navbarIcons:hover {
+  font-size: 2rem !important;
+  color: var(--navy-blue) !important;
+  padding: 10px;
+}
+
+.navbarBrand {
+  color:var(--navy-blue) !important;
+  font-size: 100%;
+  margin-left: 0%;
+}
+
+.navLink {
+  color: var(--light-blue) !important;
+  font-size: 60%;
+  font-family: 'Caveat', cursive;
+  font-family: 'Fuzzy Bubbles', cursive;
+  border-radius: 20px;
+  width: auto;
+}
+
+.navLink:hover {
+  background-color: var(--light-blue);
+  color: var(--dark-blue) !important;
+  border-radius: 20px;
+  width: auto;
+}
+
+#basicNavDropdown, #basicNavDropdown1 {
+  color: #caf0f8 !important;
+  font-size: 100%;
+  font-family: 'Caveat', cursive;
+  font-family: 'Fuzzy Bubbles', cursive;
+  border-radius: 20px;
+  width: auto;
+}
+
+div.dropdown-menu.show {
+background-color: var(--dark-blue) !important;
+border:0;
+padding: 0 0 !important;
+text-align: center;
+}
+
 /* About Component */
 .aboutContainer {
     font-family: "Caveat", cursive;
@@ -91,7 +158,7 @@ li {
 
 /* Contact Me Component */
 
-.formlabel {
+.formLabel {
   display: flex;
   margin: auto;
   color: var(--aqua-blue);
@@ -104,7 +171,7 @@ li {
   font-family: "Fuzzy Bubbles", cursive !important;
 }
 
-.forminput {
+.formInput {
   display: flex;
   text-align: center;
   justify-content: center;
@@ -115,23 +182,7 @@ li {
   font-family: "Fuzzy Bubbles", cursive !important;
 }
 
-.formsubmit {
-  display: flex;
-  margin: auto;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  color: var(--dark-blue) !important;
-  background-color: #5ff;
-  font-weight: bold;
-  font-size: 1rem;
-  width: 30%;
-  margin-bottom: 5%;
-  font-family: "Caveat", cursive !important;
-  font-family: "Fuzzy Bubbles", cursive !important;
-}
-
-.submit-button {
+.submitButton {
   display: flex;
   font-family: "Caveat", cursive !important;
   font-family: "Fuzzy Bubbles", cursive !important;
@@ -148,12 +199,12 @@ li {
   background-color: var(--aqua-blue) !important;
 }
 
-.submit-button:hover {
+.submitButton:hover {
   color: var(--aqua-blue) !important;
   background-color: var(--navy-blue) !important;
 }
 
-.messagebox {
+.messageBox {
   display: flex;
   margin: auto;
   text-align: center;
@@ -165,7 +216,7 @@ li {
   font-family: "Fuzzy Bubbles", cursive !important;
 }
 
-.messagelabel {
+.messageLabel {
   margin: auto;
   display: flex;
   color: var(--aqua-blue);
