--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -266,6 +266,14 @@ li {
   display: flex;
 }
 
+.professionalCardImage {
+  width: 100%;
+  height: 100%;
+  object-fit: 100%;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
 .cardImg {
   width: 100%;
   height: 100%;
