--- a/src/assets/styles/pages.css
+++ b/src/assets/styles/pages.css
@@ -5,6 +5,7 @@
   text-align: center;
   padding: 1%;
   margin: 0;
+  max-width: 100%;
 }
 
 /* Home Page */
@@ -15,6 +16,7 @@
   background-position: center;
   background-size: cover;
   min-height: 100vh;
+  max-width: 100%;
 }
 
 .homePageTitle {
@@ -31,7 +33,8 @@
   display: flex;
   margin: auto;
   justify-content: center;
-  width: 80%;
+  width: 90%;
+  padding: 10px;
 }
 
 .profilePic {
